# gossip

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml  taplo.toml
.github/workflows/: rust.yml
chitchat/: Cargo.toml
chitchat/src/: delta.rs  digest.rs  failure_detector.rs  lib.rs  listener.rs  message.rs  serialize.rs  server.rs  state.rs  types.rs
chitchat/src/transport/: channel.rs  mod.rs  udp.rs  utils.rs
chitchat/tests/: cluster_test.rs  perf_test.rs
gossip/: Cargo.toml
gossip/src/: lib.rs
gossip/src/transport/: channel.rs  mod.rs
gossip/src/transport/quic/: incoming.rs  mod.rs  outgoing.rs
gossip_transport/: Cargo.toml
gossip_transport/src/: channel.rs  crypto.rs  lib.rs
gossip_transport/src/quic/: incoming.rs  outgoing.rs
gossip_transport/tests/: gossip_over_quic.rs  quic_perf_test.rs
tls_rpk/: Cargo.toml  README.md
tls_rpk/src/: config.rs  lib.rs  verifier.rs
