[workspace]
members = [
    #
    "chitchat",
    "gossip_transport",
    "tls_rpk",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
hex = "0.4.3"
opentelemetry = { version = "0.29.1", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "http-proto", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
poem = "3.1.10"
poem-openapi = { version = "5.1.14", features = ["swagger-ui"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wtransport = { version = "0.6.1", features = ["dangerous-configuration", "quinn"] }

chitchat = { path = "chitchat" }
