[package]
name = "gossip"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
poem.workspace = true
poem-openapi.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
wtransport.workspace = true

async-channel = "2.3.1"
clap = { version = "4.5.2", features = ["derive", "env"] }
cool-id-generator = "1.0.1"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = { version = "0.9" }
shellexpand = { version = "3.1.0", features = ["path"] }
strum = { version = "0.26", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
url_serde = "0.2.0"

chitchat = { path = "../chitchat" }
